# kronroe

./: .firebaserc  .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENCE-COMMERCIAL.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  firebase.json
.claude/skills/kronroe-check/: SKILL.md
.claude/skills/kronroe-check/evals/: evals.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: android.yml  ci.yml  cla-sync.yml  cla.yml  codeql.yml  deploy-site.yml  ios.yml  mcp-shim-publish.yml  python-publish.yml  python-wheels.yml
contracts/: stable-agent-memory.json
crates/agent-memory/: Cargo.toml
crates/agent-memory/src/: agent_memory.rs  lib.rs
crates/android/: Cargo.toml
crates/android/kotlin/com/kronroe/: KronroeGraph.kt
crates/android/scripts/: build-android-libs.sh
crates/android/src/: android_bindings.rs
crates/core/: Cargo.toml
crates/core/src/: contradiction.rs  error.rs  fact_id.rs  hybrid.rs  json_read.rs  json_write.rs  kronroe_time.rs  lexical.rs  lib.rs  storage.rs  storage_append_log.rs  storage_benchmarks.rs  storage_observability.rs  temporal_graph.rs  uncertainty.rs  vector.rs
crates/docs-api/: Cargo.toml  Dockerfile  README.md
crates/docs-api/src/: main.rs
crates/ios/: Cargo.toml  README.md  cbindgen.toml
crates/ios/include/: kronroe.h  module.modulemap
crates/ios/scripts/: build-xcframework.sh  generate-header.sh  run-swift-tests.sh
crates/ios/src/: ffi.rs  lib.rs
crates/ios/swift/: Package.swift
crates/ios/swift/Sources/Kronroe/: Kronroe.swift  KronroeMemoryStore.swift
crates/ios/swift/Tests/KronroeTests/: KronroeTests.swift
crates/mcp-server/: Cargo.toml  README.md
crates/mcp-server/src/: main.rs
crates/mcp-server/tests/: stdio_smoke.rs
crates/python/: Cargo.toml  README.md  pyproject.toml
crates/python/scripts/: run_runtime_smoke.sh  run_rust_runtime_tests.sh
crates/python/src/: lib.rs  python_bindings.rs
crates/python/tests/: runtime_smoke.py
crates/wasm/: Cargo.toml
crates/wasm/.cargo/: config.toml
crates/wasm/src/: lib.rs  wasm_bindings.rs
design/branding/: README.md  TYPOGRAPHY.md
design/branding/logo/: DEPLOY-LOGO.md  LOGO-SYSTEM.md
design/branding/source/: kronroe-logo-preview.html
docs/: API-STABILITY-MATRIX.md  HYBRID-BEHAVIOR-GUIDE.md  HYBRID-RERANKER-CONTRACT.md  HYBRID-ROLLBACK-RUNBOOK.md  HYBRID-TELEMETRY-SCHEMA.md  NAMING-CONVENTIONS.md  RELEASE-NOTES-0.4.md  STABLE-AGENT-MEMORY-CONTRACT.md  STORAGE-ENGINE.md  ios-consumer-integration-findings.md
docs/deploy/: firebase-playground.md
docs/plans/: 2026-02-22-agent-memory-phase1.md  2026-02-23-technical-phase-review.md  2026-02-26-hybrid-product-gate-checkpoint.md  2026-02-26-hybrid-timeslice-research-checkpoint.md  2026-03-11-cross-surface-contract-matrix.md  2026-03-11-plan-ideas-experiments-audit.md  2026-03-14-hybrid-real-world-utility-research.md  2026-03-14-hybrid-stage3-production-checklist.md  2026-03-20-storage-backend-research-plan.md  2026-03-20-storage-benchmark-baseline.md  2026-03-21-storage-backend-comparison-baseline.md  ios-integration-proof.md
python/kronroe-mcp/: README.md  pyproject.toml
python/kronroe-mcp/src/kronroe_mcp/: __init__.py  cli.py
scripts/: hybrid_stage3_gate.py  verify_contract_matrix.sh  wrapper_smoke.py
site/: .gitignore  404.html  SETUP-EXTERNAL.md  index.html  og-image.html  package-lock.json  package.json  vite.config.ts
site/about/: index.html
site/blog/: feed.xml  index.html
site/blog/why-kronroe/: index.html
site/commercial/: index.html
site/community/: index.html
site/docs/: index.html  index.md  package-lock.json  package.json
site/docs/.vitepress/: config.ts
site/docs/.vitepress/theme/: custom.css
site/docs/api/: agent-memory.md  core.md  mcp-tools.md
site/docs/concepts/: bi-temporal-model.md  facts-and-entities.md
site/docs/getting-started/: quick-start-mcp.md  quick-start-python.md  quick-start-rust.md  what-is-kronroe.md
site/faq/: index.html
site/js/: analytics-consent.js  email-capture.js
site/newsletter/confirmed/: index.html
site/newsletter/thanks/: index.html
site/og-images/: README.md  post-why-kronroe.html
site/pricing/: index.html
site/privacy/: index.html
site/public/: docs-search.js  docs-shell.css  docs-tabs.js  page-shell.css  robots.txt  sitemap.xml
site/scripts/: build-docs.mjs  build-docs.py  build-sitemap.py  smoke-playground.mjs  test_build_docs.py
site/scripts/docs-assets/: docs.css  docs.js
site/src/: animations.ts  hero-graph.ts  main.ts  playground-graph.ts
tests/site/: README.md  package-lock.json  package.json  playwright.config.ts
tests/site/scripts/: render-og-image.mjs
tests/site/specs/: consent.spec.ts
