[workspace]
members = [
    "crates/core",
    "crates/agent-memory",
    "crates/ios",
    "crates/android",
    "crates/mcp-server",
    "crates/wasm",
    "crates/python",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Rebekah Cole <becky.cole@kindlyroe.com>"]
repository = "https://github.com/kronroe/kronroe"

[workspace.dependencies]
# Storage
redb = "3.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs / entropy
getrandom = "0.3"

# Error handling
thiserror = "1"
anyhow = "1"
pyo3 = { version = "0.24", features = ["abi3-py39", "extension-module"] }

# JNI (Android)
jni = "0.21"

# Testing
tempfile = "3"

# --- Release profile ---------------------------------------------------
# Optimise for binary size across all crates.  Kronroe is a library /
# embedded engine — hot paths are I/O-bound (redb), not CPU-bound, so
# opt-level "z" is the right trade-off.  LTO + codegen-units=1 give the
# linker maximum dead-code-elimination visibility.
#
# panic = "abort" is intentionally omitted here so the MCP binary server
# and test harnesses retain unwind support.  The iOS and Android build
# scripts add panic=abort via RUSTFLAGS for their staticlib/cdylib targets.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
