[package]
name = "kronroe-agent-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "High-level agent memory API built on Kronroe"
keywords = ["agent-memory", "ai", "graph", "temporal", "mcp"]
categories = ["database-implementations"]

[dependencies]
kronroe = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
