[package]
name = "kronroe-agent-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "High-level agent memory API built on Kronroe"
homepage = "https://kronroe.dev"
documentation = "https://docs.rs/kronroe-agent-memory"
readme = "../../README.md"
keywords = ["agent-memory", "ai", "graph", "temporal", "mcp"]
categories = ["database-implementations"]

[lib]
path = "src/agent_memory.rs"

[features]
default = ["fulltext"]
fulltext = ["kronroe/fulltext"]
hybrid = ["kronroe/vector", "kronroe/hybrid-experimental"]
contradiction = ["kronroe/contradiction"]
uncertainty = ["kronroe/uncertainty"]

[dependencies]
kronroe = { version = "0.3.1", path = "../core", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
