[package]
name = "kronroe-android"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Android JNI bindings for Kronroe"
homepage = "https://kronroe.dev"
documentation = "https://docs.rs/kronroe-android"
readme = "../../README.md"
keywords = ["android", "jni", "temporal", "graph", "embedded"]
categories = ["database-implementations", "api-bindings"]

[lib]
name = "kronroe_android"
path = "src/android_bindings.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
kronroe = { version = "0.3.1", path = "../core", default-features = false }
jni = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
