[package]
name = "kronroe"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Embedded temporal property graph database"
homepage = "https://kronroe.dev"
documentation = "https://docs.rs/kronroe"
readme = "../../README.md"
keywords = ["graph", "database", "temporal", "embedded", "agent-memory"]
categories = ["database-implementations", "data-structures"]

[lib]
path = "src/temporal_graph.rs"
crate-type = ["rlib", "staticlib"]

[features]
default = ["fulltext"]
fulltext = ["dep:tantivy"]
vector = []
hybrid-experimental = []
contradiction = []
uncertainty = []

[dependencies]
redb = { workspace = true }
tantivy = { workspace = true, optional = true, default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
