[package]
name = "kronroe"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Embedded temporal property graph database"
homepage = "https://kronroe.dev"
documentation = "https://docs.rs/kronroe"
readme = "../../README.md"
keywords = ["graph", "database", "temporal", "embedded", "agent-memory"]
categories = ["database-implementations", "data-structures"]

[lib]
path = "src/temporal_graph.rs"
crate-type = ["rlib"]

[features]
default = ["fulltext"]
fulltext = []
vector = []
hybrid-experimental = []
contradiction = []
uncertainty = []

[dependencies]
redb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
getrandom = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
