[package]
name = "kronroe"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Embedded temporal property graph database"
homepage = "https://kronroe.dev"
documentation = "https://docs.rs/kronroe"
readme = "../../README.md"
keywords = ["graph", "database", "temporal", "embedded", "agent-memory"]
categories = ["database-implementations", "data-structures"]

[lib]
path = "src/temporal_graph.rs"
crate-type = ["rlib"]

[features]
default = ["fulltext"]
fulltext = []
vector = []
hybrid-experimental = []
contradiction = []
uncertainty = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
getrandom = { workspace = true }
thiserror = { workspace = true }

# WASM needs js-sys for wall-clock time (SystemTime::now() is unsupported on
# wasm32-unknown-unknown).  js-sys is already a transitive dep via wasm-bindgen
# so this adds zero new code to WASM builds, and is completely ignored on native.
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[dev-dependencies]
tempfile = { workspace = true }
