[package]
name = "kronroe-ios"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "iOS FFI bindings for Kronroe"

[lib]
name = "kronroe_ios"
crate-type = ["staticlib"]

[dependencies]
kronroe = { path = "../core", default-features = false }
chrono = { workspace = true }
serde_json = { workspace = true }
