[package]
name = "kronroe-ios"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "iOS FFI bindings for Kronroe"
homepage = "https://kronroe.dev"
documentation = "https://docs.rs/kronroe-ios"
readme = "README.md"
keywords = ["ios", "ffi", "temporal", "graph", "embedded"]
categories = ["database-implementations", "api-bindings"]

[lib]
name = "kronroe_ios"
path = "src/ffi.rs"
crate-type = ["staticlib"]

[dependencies]
kronroe = { version = "0.3.0", path = "../core", default-features = false }
chrono = { workspace = true }
serde_json = { workspace = true }
