[package]
name = "kronroe-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MCP server for Kronroe AgentMemory"
keywords = ["mcp", "agent-memory", "kronroe", "memory", "tools"]

[[bin]]
name = "kronroe-mcp"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
kronroe = { version = "0.1.1", path = "../core" }
kronroe-agent-memory = { version = "0.1.1", path = "../agent-memory" }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
hybrid = ["kronroe-agent-memory/hybrid"]
uncertainty = ["kronroe-agent-memory/uncertainty"]

[dev-dependencies]
tempfile = { workspace = true }
