[package]
name = "kronroe-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MCP server for Kronroe AgentMemory"
homepage = "https://kronroe.dev"
documentation = "https://docs.rs/kronroe-mcp"
readme = "README.md"
keywords = ["mcp", "agent-memory", "kronroe", "memory", "tools"]

[[bin]]
name = "kronroe-mcp"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
kronroe = { version = "0.2.0", path = "../core" }
kronroe-agent-memory = { version = "0.2.0", path = "../agent-memory" }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["kronroe/fulltext", "kronroe-agent-memory/fulltext"]
hybrid = ["kronroe-agent-memory/hybrid"]
uncertainty = ["kronroe-agent-memory/uncertainty"]

[dev-dependencies]
tempfile = { workspace = true }
