[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "kronroe"
version = "0.1.0"
description = "Python bindings for Kronroe temporal graph database"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Rebekah Cole", email = "becky.cole@kindlyroe.com" }]
license = { text = "AGPL-3.0-only OR Commercial" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "License :: OSI Approved :: GNU Affero General Public License v3",
]

[tool.maturin]
bindings = "pyo3"
module-name = "kronroe"
