[package]
name = "kronroe-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Kronroe temporal graph database — WebAssembly bindings"
homepage = "https://kronroe.dev"
documentation = "https://docs.rs/kronroe-wasm"
readme = "../../README.md"
keywords = ["wasm", "webassembly", "temporal", "graph", "embedded"]
categories = ["database-implementations", "wasm"]
repository.workspace = true

[lib]
path = "src/wasm_bindings.rs"
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = []
hybrid = ["kronroe-agent-memory/hybrid"]
uncertainty = ["kronroe-agent-memory/uncertainty"]

[dependencies]
# default-features = false excludes the optional `fulltext` feature so the
# browser build stays minimal and wasm-friendly.
kronroe = { version = "0.3.1", path = "../core", default-features = false }
kronroe-agent-memory = { version = "0.3.1", path = "../agent-memory", default-features = false }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }

# Keep the browser RNG path available for Kronroe Fact ID generation.
getrandom = { version = "0.2", features = ["js"] }
# Core uses getrandom 0.3; enable the wasm_js backend via .cargo/config.toml.
# Aliased as "getrandom3" so Cargo allows two versions of the same package.
getrandom3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
